--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,37 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: whitesmoke;
+}
+
+.introduction-section {
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  align-content: space-evenly;
+  font-size: 50px;
+  flex-wrap: wrap;
+}
+
+.pfp {
+  width: 300px;
+}
+
+.experience-section {
+
+}
+
+.projects-section {
+
+}
+
+.contact-section {
+  margin-top: 500px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
