--- a/src/App.css
+++ b/src/App.css
@@ -157,7 +157,7 @@ body {
   flex-direction: column;
   align-items: center;
 }
-.about-me-section div {
+.about-me-desc {
   display: flex;
   flex-direction: column;
   background-color: #c9c9c9;
@@ -174,6 +174,10 @@ body {
 .about-me-section h1{
   font-size: 100px;
   width: 500px;
+}
+
+.technology-stack img{
+  width: 40px;
 }
 
 /* contact me section */
