--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
@@ -139,6 +140,7 @@ body {
   font-weight: bold;
 }
 .tools-used div{
+  margin-top: 5px;
   background-color: whitesmoke;
   padding: 8px;
   border-radius: 8px;
@@ -191,7 +193,7 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #c9c9c9;
-  width: 600px;
+  width: 60%;
   padding: 50px;
   border-radius: 20px;
 }
@@ -219,12 +221,14 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 .techstack2 {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 .technology-name-icon-group {
   display: flex;
@@ -246,7 +250,7 @@ body {
 
 /* contact me section */
 .contact-me-section {
-  width: 500px;
+  width: 50%;
   margin-top: 200px;
   margin-bottom: 200px;
   display: flex;
@@ -259,6 +263,7 @@ body {
   border-radius: 20px;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
 }
 .contact-icon {
@@ -273,6 +278,9 @@ body {
 
 /* breakpoints */
 @media only screen and (max-width: 1220px) {
+  .section-title {
+    font-size: 80px;
+  }
   .main-intro {
     flex-direction: column;
     align-items: center;
@@ -310,6 +318,10 @@ body {
     width: 80%;
   }
 
+  .project-desc {
+    margin-left: 0px;
+    width: 90%;
+  }
   .project-desc span {
     width: 100%;
     font-size: 30px;
